Fixed jumping image and scrolling menu

--- a/src/styles/blocks/_root.scss
+++ b/src/styles/blocks/_root.scss
@@ -1,10 +1,7 @@
 :root {
   scroll-behavior: smooth;
   font-size: 16px;
-  @include for-desktop {
-    margin-left: calc(-100vw + 100%);
-    margin-right: 0;
-    overflow: auto;
-    box-sizing: border-box;
-  }
+  margin-left: 0;
+  margin-right: calc(-100vw + 100%);
+  box-sizing: border-box;
 }
